test/custom/good/coreml_id.mle
let ['a] (identity : 'a -> 'a) = ['a] fun (x : 'a) -> x []
